# cpp_simple_table_lib

./: .gitmodules  CMakeLists.txt
include/: table.hpp
